# LLMBasic

./: CMakeLists.txt
libcurl/lib/Win64/Release/: libcurl.lib  zlibstatic.lib
src/: main.cpp
src/Basic/: AsyncCaller.h  Base64Encode.cpp  Base64Encode.h  HttpRequest.cpp  HttpRequest.h  ThreadWorkPool.h
src/LLMOpenAPI/: ClaudeClient.cpp  ClaudeClient.h  HttpRequest.cpp  HttpRequest.h  ThreadWorkPool.cpp
